# LorentzLinear

./: pyproject.toml  requirements.txt
configs/: tier1.yaml
core/: __init__.py  hyperbolic_ops.py  krein_features.py  lorentz_linear.py  space_features.py
core/baselines/: __init__.py  hypformer_linear.py  performer.py  quadratic_lorentz.py
data/: loader.py
experiments/graph_tasks/: disease_sanity.py  run_benchmarks.py  run_benchmarks_tuned.py
experiments/kernel_validation/: exp1_kernel_approx.py  exp2_normalizer_health.py  exp3_attention_error.py  exp4_equivariance.py  exp4b_prop4_validation.py  exp5_degenerate_analysis.py
models/: hyp_graph_transformer.py
results/tier2/: benchmark_results.json  benchmark_results_tuned.json
scripts/: run_all_tier1.py
tests/: test_baselines.py  test_hyperbolic_ops.py  test_krein_features.py  test_lorentz_linear.py  test_space_features.py
