[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorentz-linear"
version = "0.1.0"
description = "Geometrically-principled linear attention for hyperbolic Transformers via Lorentzian feature maps"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
